2004-06-30  Tom Copeland <tom@infoether.com>

	* www/exports/rss_sfnews.php, index.html: Applied patch #831:
	more detailed RSS feed

2004-06-29  Tom Copeland <tom@infoether.com>

	* common/pm/ProjectTask.class: Applied patch #825:
	pg_atoi error in Tasks
	* www/tracker/mod-limited.php: Applied patch #802:
	invalid download link for attached files in a tracker item

2004-06-09  Tom Copeland <tom@infoether.com>

	* www/include/languages/PortugueseBrazilian.tab: Applied patch #811:
	Small (but relevant) fix for Brazilian Portuguese translation

2004-06-07  Tom Copeland <tom@infoether.com>

	* www/stats/i18n.php: Fixed bug #807: i18n.php had 
	a typo in the SQL query

2004-06-03  Tom Copeland <tom@infoether.com>

	* www/admin/grouplist.php: Added "Register time" to the field list.

2004-06-01  Tom Copeland <tom@infoether.com>

	* www/account/register.php: Moved "title" field up a bit.

2004-05-16  Roland Mas  <99.roland.mas@aist.enst.fr>

	* SCM pluginification: new SCMPlugin class, SCM pages now call the
	SCM plugins instead of hardcoding CVS.  More hooks.

2004-05-12  Tom Copeland <tom@infoether.com>

	* www/include/snippet_caching.php: Modified queries to use GROUP BY
	vs repeated queries.  This requires only 2 queries rather than about 20;
	on my workstation it resulted in about a 20% speedup; should be better
	than that on large databases or setups where the application server
	and database server are on separate machines.
	* www/include/snippet_caching.php: Removed this page
	and moved the code into www/snippet/index.php.

2004-05-09  Christian Bayle <bayle@debian.org>

	* Made system management OO (Work in progress)
	created common/include/system dir that
	contains UNIX and LDAP implementation
	Now you have to choose your sys_account_manager_type
	in local.inc, defaulted to UNIX
	ldpa.php is removed, the code was moved in LDAP.class
	sys_use_ldap will be removed shortly and replace by the 
	use of sys_account_manager_type=LDAP